// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client create and query post with comments 1`] = `
{
  "data": {
    "viewer": {
      "postList": {
        "edges": [
          {
            "node": {
              "comments": {
                "edges": [],
              },
              "commentsCount": 3,
              "text": "First post content",
              "title": "A first post",
            },
          },
          {
            "node": {
              "comments": {
                "edges": [
                  {
                    "node": {
                      "text": "A first comment",
                    },
                  },
                  {
                    "node": {
                      "text": "A second comment",
                    },
                  },
                  {
                    "node": {
                      "text": "A third comment",
                    },
                  },
                ],
              },
              "commentsCount": 3,
              "text": "Second post content",
              "title": "A second post",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`client create and query post with filters 1`] = `
{
  "data": {
    "viewer": {
      "postList": {
        "edges": [
          {
            "node": {
              "ranking": 1,
              "text": "First post content",
              "title": "A first post",
            },
          },
          {
            "node": {
              "ranking": 2,
              "text": "Second post content",
              "title": "A second post",
            },
          },
          {
            "node": {
              "ranking": 5,
              "text": "First post content",
              "title": "A first post",
            },
          },
          {
            "node": {
              "ranking": 4,
              "text": "Second post content",
              "title": "A second post",
            },
          },
        ],
      },
    },
  },
}
`;
